--- a/ai_chatbot_backend/Dockerfile
+++ b/ai_chatbot_backend/Dockerfile
@@ -1,18 +1,22 @@
 # Use official Python image
 FROM python:3.10-slim
 
-# Set the working directory
+# Set the working directory inside the container
 WORKDIR /app
 
-# Copy backend files into the container
+# Copy only requirements first to leverage Docker cache
+COPY requirements.txt .
+
+# Upgrade pip and install Python dependencies
+RUN pip install --upgrade pip \
+ && pip install --no-cache-dir -r requirements.txt
+
+# Now copy the rest of your application
 COPY . .
 
-# Install Python dependencies
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+# Expose the port FastAPI will run on
+# 🔁 IMPORTANT: Render expects the app to bind to port 10000
+EXPOSE 10000
 
-# Expose port FastAPI runs on
-EXPOSE 8000
-
-# Start FastAPI with uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Start FastAPI using uvicorn on the correct port
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "10000"]
