--- a/ai_chatbot_backend/Dockerfile
+++ b/ai_chatbot_backend/Dockerfile
@@ -1,22 +1,15 @@
-# Use official Python image
 FROM python:3.10-slim
 
-# Set the working directory inside the container
 WORKDIR /app
 
-# Copy only requirements first to leverage Docker cache
-COPY requirements.txt .
+# Use correct path
+COPY ai_chatbot_backend/requirements.txt .
 
-# Upgrade pip and install Python dependencies
 RUN pip install --upgrade pip \
  && pip install --no-cache-dir -r requirements.txt
 
-# Now copy the rest of your application
-COPY . .
+# Copy rest of backend app
+COPY ai_chatbot_backend/ .
 
-# Expose the port FastAPI will run on
-# 🔁 IMPORTANT: Render expects the app to bind to port 10000
 EXPOSE 10000
-
-# Start FastAPI using uvicorn on the correct port
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "10000"]
