--- a/ai_chatbot_backend/requirements.txt
+++ b/ai_chatbot_backend/requirements.txt
@@ -12,7 +12,6 @@ click==8.1.8
 comm==0.2.2
 debugpy==1.8.13
 decorator==5.2.1
-dnspython==2.7.0
 executing==2.2.0
 fastapi==0.115.8
 h11==0.14.0
@@ -43,7 +42,6 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pydantic==2.10.6
 pydantic_core==2.27.2
-pymongo==4.3.3  # ✅ Compatible with motor 3.3.1
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -73,3 +71,4 @@ watchfiles==1.0.4
 wcwidth==0.2.13
 webencodings==0.5.1
 websockets==15.0
+pymongo==4.6.3
