--- a/ai_chatbot_frontend/Dockerfile
+++ b/ai_chatbot_frontend/Dockerfile
@@ -6,30 +6,26 @@ WORKDIR /app
 # Copy dependencies
 COPY package.json ./
 
-# If you have package-lock.json, uncomment the line below
-# COPY package-lock.json ./
+# Use legacy peer deps to avoid conflicts
+RUN npm install --legacy-peer-deps
 
-RUN npm install
-
-# Copy remaining files
+# Copy rest of the files
 COPY . .
 
-# Build-time environment variable for API URL
+# Build-time environment variable
 ARG REACT_APP_API_URL
 ENV REACT_APP_API_URL=$REACT_APP_API_URL
 
-# Build the production-ready React app
+# Build production build
 RUN npm run build
 
 # Stage 2: Serve with Nginx
 FROM nginx:stable-alpine
 
-# If using React Router, provide a custom nginx config
-# Make sure you have a valid `nginx.conf` in the project root
-# If not, REMOVE the following line
+# Custom nginx config for React routing
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Copy build output to Nginx's HTML directory
+# Copy build to nginx
 COPY --from=build /app/build /usr/share/nginx/html
 
 EXPOSE 80
